--- a/flask-d3-hello-world/templates/plot.html
+++ b/flask-d3-hello-world/templates/plot.html
@@ -6,6 +6,17 @@
       padding-right: 5px;
       margin: 0px;
     }
+    
+    #tooltip {
+      width: 150px;
+      background-color: white;
+      position: absolute;
+      border: 2px solid;
+    }
+    #clusterHeading {
+      font-style: bold;
+      margin-top: 20px;
+    }
   </style>
   <head>
     <title>Player Clustering</title>
@@ -140,7 +151,7 @@
     </div>
     <div id="plot"></div>
 
-    <div class="row-fluid">
+    <div id="clusterHeading" class="row-fluid">
       <div class="span8 offset2">
         <div class="span3">Cluster</div>
         <div id="average1" class="span3">Average 1</div>
@@ -155,6 +166,13 @@
       $("#go").click(function() {
           $("#clusterInfo").empty();
           $("#plot").empty();
+          var tip = d3.select("#plot")
+            .append("div")
+            .attr("id", "tooltip");
+    
+          tip.append("div")
+            .attr("id", "value");
+
           var expVar1 = $("#expVar1 :selected").text();
           var expVar2 = $("#expVar2 :selected").text();
           var season = $("#season :selected").attr("year");
@@ -215,18 +233,34 @@
             svgContainer.append("svg:g").attr("class", "x axis")
                            .attr("transform", "translate(0, " + h + ")");
             svgContainer.append("svg:g").attr("class", "y axis");
- 
+            
+            var colors = ["#156b87", "#876315", "#543510", "#872815", "#872815"];
+
+            var clusterCircles = svgContainer.selectAll("clusterCircle")
+                            .data(clusterInfo)
+                            .enter()
+                            .append("circle");
+
+            var clusterCircleAttributes = clusterCircles
+                            .attr("cx", function (d) { return xScale(d.var1); })
+                            .attr("cy", function (d) { return yScale(d.var2); })
+                            .attr("r", function (d) { return Math.max(Math.abs(xScale(d.farX)-xScale(d.var1)), Math.abs(yScale(d.farY)-yScale(d.var2))); })
+                            .attr("fill", function (d) { return colors[d._cluster]; })
+                            .attr("opacity", 0.5);
+
             var circles = svgContainer.selectAll("circle")
                             .data(jsonCircles)
                             .enter()
                             .append("circle");
-            var colors = ["#156b87", "#876315", "#543510", "#872815", "#872815"];
 
             var circleAttributes = circles
-                            .attr("cx", function (d) { if (xScale(d.var1)>1000) {console.log(d.var1 + "," + xScale(d.var1));} return xScale(d.var1); })
+                            .attr("cx", function (d) { return xScale(d.var1); })
                             .attr("cy", function (d) { return yScale(d.var2); })
                             .attr("r", function (d) { return rScale(20); })
                             .attr("fill", function (d) {return colors[d.cluster]});
+
+
+
 
             circles.on("mouseover", function(d,i) {
               var response = $("#response :selected").text()
@@ -237,38 +271,16 @@
                 .select("#value")
                 .html("<p>"+d._name+"</p><p>Team: "+d._tm+"</p><p>"+response+": "+d.response+"</p>");
 
-                d3.select(this).attr("fill", d3.rgb(d3.select(this).style("fill")).brighter(2));
+                d3.select(this).attr("fill", d3.rgb(d3.select(this).style("fill")).brighter());
             });
     
             circles.on("mouseout", function(d,i) {
               tip.style("display", "none")
 
-              d3.select(this).attr("fill", d3.rgb(d3.select(this).style("fill")).darker(2));
+              d3.select(this).attr("fill", colors[d.cluster]);
             });
           });
       });
-
-
-      var jsonCircles = [
-        {"_name": "Tim Brown", "_tm": "GSW", "var1": 50, "var2": 25, "cluster": 1, "response":5},
-        {"_name": "Tim Brown", "_tm": "GSW", "var1": 100, "var2": 500, "cluster": 1, "response":25},
-        {"_name": "Tim Brown", "_tm": "GSW", "var1": 0, "var2": 0, "cluster": 1, "response":15}];
-      var jsonRectangles = [
-        { "x_axis": 10, "y_axis": 10, "height": 20, "width":20, "color" : "green" },
-        { "x_axis": 40, "y_axis": 40, "height": 20, "width":20, "color" : "purple" },
-        { "x_axis": 70, "y_axis": 70, "height": 20, "width":20, "color" : "red" }];
-
-      var tip = d3.select("#plot")
-        .append("div")
-        .attr("id", "tooltip");
-    
-      tip.append("div")
-        .attr("id", "value");
-
-      tip.style("width", "150px")
-        .style("background-color", "white")
-        .style("position", "absolute")
-        .style("border", "2px solid");
     </script>
   </body>
 </html>
