--- a/flask-d3-hello-world/templates/plot.html
+++ b/flask-d3-hello-world/templates/plot.html
@@ -17,6 +17,9 @@
       font-style: bold;
       margin-top: 20px;
     }
+    circle {
+      position: relative;
+    }
   </style>
   <head>
     <title>Player Clustering</title>
@@ -90,26 +93,8 @@
       </div>
       <div class="span2">
         <select id="response" style="width: 100%;">
-          <option>GMP</option>
-          <option>PER</option>
-          <option>TS%</option>
-          <option>eFG%</option>
-          <option>FTr</option>
-          <option>3PAr</option>
-          <option>ORB%</option>
-          <option>DRB%</option>
-          <option>TRB%</option>
-          <option>AST%</option>
-          <option>STL%</option>
-          <option>BLK%</option>
-          <option>TOV%</option>
-          <option>USG%</option>
-          <option>ORtg</option>
-          <option>DRtg</option>
-          <option>OWS</option>
-          <option>DWS</option>
-          <option>WS</option>
-          <option>WS/48</option>
+          <option>Salary</option>
+          <option>Age</option>
         </select>
       </div>
       <div class="span2">
@@ -146,7 +131,16 @@
     </div>
     <div class="row-fluid">
       <div class="span3 offset5">
-        <button id="go" class="btn btn-large btn-primary" type="button" style="margin-bottom:50px;">Generate Plot</button>
+        <button id="go" class="btn btn-large btn-primary" type="button" style="margin-bottom:10px;">Generate Plot</button>
+      </div>
+    </div>
+    <div class="row-fluid" style="margin-bottom:30px;">
+      <div class="span4 offset4"> 
+        <div style="display:inline-block; padding-right=50px;">Select Player:</div>
+        <div style="display:inline-block;">
+          <select id="players" style="width: 200px;">
+          </select>
+        </div>
       </div>
     </div>
     <div id="plot"></div>
@@ -163,9 +157,17 @@
 
 
     <script>
+      $("#players").change(function() {
+        var playerId = "#"+$("#players :selected").text().replace(/ /g,"_").replace(/\(/g,"").replace(/\)/g,"");
+        console.log(playerId);
+        var p = $(playerId)[0];
+        $(p).attr("fill", d3.rgb($(p).attr("fill")).brighter(3));
+      });
+
       $("#go").click(function() {
           $("#clusterInfo").empty();
           $("#plot").empty();
+          $("#players").empty();
           var tip = d3.select("#plot")
             .append("div")
             .attr("id", "tooltip");
@@ -177,6 +179,7 @@
           var expVar2 = $("#expVar2 :selected").text();
           var season = $("#season :selected").attr("year");
           var position = $("#position :selected").text();
+          var response = $("#response :selected").text();
           var url = "/cluster/" + season + "/" + position + "/" + expVar1 + "/" + expVar2 + "/0"
           $.getJSON(url, function(data) {
             var clusterInfo = data._clusterObj;
@@ -199,10 +202,12 @@
 
 
             for (var i = 0; i < jsonCircles.length; i++) {
+              $("#players").append("<option>"+jsonCircles[i]._name+" ("+jsonCircles[i]._tm+")"+"</option>");
+
               var temp_x, temp_y, temp_r;
               var temp_x = parseFloat(jsonCircles[i].var1);
               var temp_y = parseFloat(jsonCircles[i].var2);
-              var temp_r = jsonCircles[i].response;
+              var temp_r = parseFloat(jsonCircles[i].response);
               if ( temp_x >= max_x ) { max_x = temp_x; }
               if ( temp_x < min_x ) { min_x = temp_x; }
 
@@ -254,6 +259,7 @@
                             .append("circle");
 
             var circleAttributes = circles
+                            .attr("id", function (d) { var pid = d._name + " " + d._tm; return pid.replace(/ /g,"_"); ;})
                             .attr("cx", function (d) { return xScale(d.var1); })
                             .attr("cy", function (d) { return yScale(d.var2); })
                             .attr("r", function (d) { return rScale(20); })
