--- a/flask-d3-hello-world/templates/plot.html
+++ b/flask-d3-hello-world/templates/plot.html
@@ -23,6 +23,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="navbar-inner">
+            <a class="brand" href="/" style="padding-left:50px;">NBA Stats Modeling</a>
+            <ul class="nav">
+                <li class="active"><a href="/plot">Clustering</a></li>
+                <li><a href="/predict">Regression</a></li>
+                <li><a href="#">Network</a></li>
+            </ul>
+          </div>
+      </div>
   </head>
   <body style="margin:50px;">
     <div class="row-fluid" style="margin-bottom:50px;">
