last updates before presentation

--- a/flask-d3-hello-world/templates/index.html
+++ b/flask-d3-hello-world/templates/index.html
@@ -15,11 +15,18 @@
             <ul class="nav">
                 <li><a href="/plot">Clustering</a></li>
                 <li><a href="/predict">Regression</a></li>
-                <li><a href="#">Network</a></li>
+                <li><a href="/graph">Network</a></li>
+            </ul>
+            <ul class="nav pull-right">
+              <li><a href="#">Tim Brown, Alan Kao, Boris Lin</a></li>
             </ul>
         </div>
     </div>
   </head>
-  <body>
+  <body style="margin:30px">
+    <div class="span12" style="margin:15px;"><h1 style="text-align:center;width:100%;">Player Clustering</h1></div>
+    <a href="/plot"><img src="static/cluster.png"></img></a>
+    <div class="span12" style="margin:15px;"><h1 style="text-align:center;width:100%;margin">Statistics Prediction</h1></div>
+    <a href="/predict"><img src="static/regression.png"></img></a>
   </body>
 </html>
