--- a/flask-d3-hello-world/templates/plot.html
+++ b/flask-d3-hello-world/templates/plot.html
@@ -29,7 +29,10 @@
             <ul class="nav">
                 <li class="active"><a href="/plot">Clustering</a></li>
                 <li><a href="/predict">Regression</a></li>
-                <li><a href="#">Network</a></li>
+                <li><a href="/graph">Network</a></li>
+            </ul>
+            <ul class="nav pull-right">
+              <li><a href="#">Tim Brown, Alan Kao, Boris Lin</a></li>
             </ul>
           </div>
       </div>
