--- a/flask-d3-hello-world/templates/graph.html
+++ b/flask-d3-hello-world/templates/graph.html
@@ -14,6 +14,23 @@
 }
 
 </style>
+<title>Player Network</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="navbar-inner">
+            <a class="brand" href="/" style="padding-left:50px;">NBA Stats Modeling</a>
+            <ul class="nav">
+                <li><a href="/plot">Clustering</a></li>
+                <li><a href="/predict">Regression</a></li>
+                <li class="active"><a href="/graph">Network</a></li>
+            </ul>
+            <ul class="nav pull-right">
+              <li><a href="#">Tim Brown, Alan Kao, Boris Lin</a></li>
+            </ul>
+          </div>
+      </div>
 </head>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
@@ -61,6 +78,7 @@ d3.csv("static/player_edges.csv", function(links) {
       .links(links)
       .on("tick", tick)
       .start();
+
 
   function tick() {
     link.attr("x1", function(d) { return d.source.x; })
